# exocortex

./: .gitignore  AGENTS.md  README.ja.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.serena/: project.yml
docs/: codebase_review_20251205.md  design_doc.md  graph_architecture.md  usage-guide.ja.md
exocortex/: __init__.py  config.py  container.py  main.py  proxy.py  server.py
exocortex/brain/: __init__.py
exocortex/brain/amygdala/: __init__.py  frustration.py  sentiment.py
exocortex/brain/hippocampus/: __init__.py  dynamics.py
exocortex/brain/neocortex/: __init__.py  patterns.py
exocortex/brain/prefrontal/: __init__.py
exocortex/brain/temporal_lobe/: __init__.py
exocortex/dashboard/: __init__.py  app.py
exocortex/dashboard/static/: app.js  index.html  styles.css
exocortex/domain/: __init__.py  exceptions.py  models.py  services.py
exocortex/domain/models/: __init__.py  enums.py  graph.py  health.py  memory.py  pattern.py  results.py
exocortex/domain/services/: __init__.py  analyzer.py  curiosity.py  health.py  memory.py  pattern.py  sentiment.py
exocortex/infra/: __init__.py  database.py  embeddings.py  repositories.py
exocortex/infra/queries/: __init__.py  memory_queries.py
exocortex/infra/repositories/: __init__.py  base.py  link.py  memory.py  memory_crud.py  pattern.py  row_mapper.py  search.py  stats.py
exocortex/worker/: __init__.py  dream.py  process.py
manuals/: usage-guide.ja.md  usage-guide.md
src/exocortex/: __init__.py  config.py  db.py  embeddings.py  main.py  models.py  server.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_database.py  test_memory_dynamics.py  test_pattern_abstraction.py  test_server.py  test_sleep_mechanism.py
tests/unit/: __init__.py  test_brain_modules.py  test_curiosity_engine.py  test_dashboard.py  test_exceptions.py  test_frustration_indexing.py  test_memory_dynamics.py  test_models.py  test_pattern_abstraction.py  test_sentiment.py  test_server.py  test_services.py  test_services_components.py  test_sleep_mechanism.py
